pagination/overflow fixes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,7 @@ body {
 
 button:disabled {
   color: hsla(0, 0%, 95%, 0.5);
+  cursor: default;
 }
 
 html {
